--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
-
 ### STS ###
 .apt_generated
 .classpath
@@ -10,7 +7,7 @@
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+### IDEA ###
 .idea
 *.iws
 *.iml
