--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,18 @@
+<!--
+  ~ Copyright(c) 2022 TechSure Co., Ltd. All Rights Reserved.
+  ~ 本内容仅限于深圳市赞悦科技有限公司内部传阅，禁止外泄以及用于其他的商业项目。
+  -->
+
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.techsure</groupId>
         <artifactId>codedriver-parent</artifactId>
-        <version>[1.0.0, 2.0.0]</version>
+        <version>[2.0.0, 3.0.0)</version>
     </parent>
     <artifactId>codedriver-rdm</artifactId>
-    <version>0.1.0.0-SNAPSHOT</version>
+    <version>0.2.0.0-SNAPSHOT</version>
     <build>
         <resources>
             <resource>
@@ -30,22 +35,11 @@
                 </includes>
             </resource>
         </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>com.techsure</groupId>
-            <artifactId>codedriver-framework</artifactId>
-            <version>0.1.0.0-SNAPSHOT</version>
-            <optional>true</optional>
+            <artifactId>codedriver-rdm-base</artifactId>
         </dependency>
     </dependencies>
     
