--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.techsure</groupId>
-        <artifactId>codedriver-parent</artifactId>
-        <version>[2.0.0, 3.0.0)</version>
+        <groupId>com.neatlogic</groupId>
+        <artifactId>neatlogic-parent</artifactId>
+        <version>[3.0.0, 4.0.0)</version>
     </parent>
-    <artifactId>codedriver-rdm</artifactId>
-    <version>0.2.0.0-SNAPSHOT</version>
+    <artifactId>neatlogic-rdm</artifactId>
+    <version>3.0.0</version>
     <build>
         <resources>
             <resource>
@@ -39,7 +39,7 @@
     <dependencies>
         <dependency>
             <groupId>com.techsure</groupId>
-            <artifactId>codedriver-rdm-base</artifactId>
+            <artifactId>neatlogic-rdm-base</artifactId>
         </dependency>
     </dependencies>
     
